// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Info /> should show tooltip when click on icon 1`] = `
.c0 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  position: relative;
  display: initial;
}

.c0 svg {
  margin: 0px 10px;
}

.c1 {
  background-color: #EFEFEF;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 12px 16px;
  border-radius: 5px;
  position: absolute;
  color: #1F1F1F;
  max-width: 300px;
  text-transform: none;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  bottom: 25px;
}

<div
  class="c0"
  data-testid="tooltip"
>
  <div
    class="c1"
    data-testid="tooltip-content"
  >
    Info Content
  </div>
  <div>
    mocked icon
  </div>
</div>
`;

exports[`<Info /> should show tooltip when click on icon 2`] = `
.c0 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  position: relative;
  display: initial;
}

.c0 svg {
  margin: 0px 10px;
}

<div
  class="c0"
  data-testid="tooltip"
>
  <div>
    mocked icon
  </div>
</div>
`;
